[metadata]
name = visualizegpt
version = 0.1.0
description = A package that creates matplotlib and seaborn visualizations from pandas dataframes using OpenAI's LLMs
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/visualizegpt

[options]
packages = find:
install_requires =
    pandas
    matplotlib
    seaborn
    openai
python_requires = >=3.6, <4

[options.extras_require]
dev =
    pytest
    black
    flake8
    mypy

[options.packages.find]
exclude =
    tests*